moved public strings to a ressource file and changed some minors design itens like the disposition and font of some controls

--- a/Projeto Estacionamento/Properties/Resources.resx
+++ b/Projeto Estacionamento/Properties/Resources.resx
@@ -117,12 +117,63 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AllJsonFilters" xml:space="preserve">
+    <value>Arquivos JSON (*.json)|*.json|Todos os arquivos (*.*)|*.*</value>
+  </data>
+  <data name="AllPdfFilters" xml:space="preserve">
+    <value>All files (*.*)|*.*|Pdf File (*.pdf)|*.pdf</value>
+  </data>
+  <data name="Confirmation" xml:space="preserve">
+    <value>Confirmação</value>
+  </data>
+  <data name="DataGridClear" xml:space="preserve">
+    <value>O dataGridView foi limpo</value>
+  </data>
+  <data name="DataGridIsAlreadyClear" xml:space="preserve">
+    <value>O DataGridView já está vazio</value>
+  </data>
+  <data name="ErrorDuringSearch" xml:space="preserve">
+    <value>Erro durante a busca</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="excel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\excel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FileGenerated" xml:space="preserve">
+    <value>Arquivo gerado com sucesso</value>
+  </data>
+  <data name="FileSaved" xml:space="preserve">
+    <value>Arquivo salvo com sucesso</value>
+  </data>
+  <data name="HaveYouSureNewProject" xml:space="preserve">
+    <value>Tem certeza que deseja criar um novo projeto? Isso ira deletar a edição atual</value>
+  </data>
+  <data name="JsonFilters" xml:space="preserve">
+    <value>Arquivos JSON (*.json)|*.json</value>
+  </data>
+  <data name="MessageBoxError" xml:space="preserve">
+    <value>Erro</value>
+  </data>
+  <data name="MessageBoxInfo" xml:space="preserve">
+    <value>Informação</value>
+  </data>
+  <data name="MessageBoxWarning" xml:space="preserve">
+    <value>Warning</value>
+  </data>
+  <data name="NotFunctional" xml:space="preserve">
+    <value>Função não aplicavel </value>
+  </data>
   <data name="parking-lot-banner" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\parking-lot-banner.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PlotNotFound" xml:space="preserve">
+    <value>Placa não encontrada</value>
+  </data>
+  <data name="SearchForaPlot" xml:space="preserve">
+    <value>Digite uma placa para pesquisar</value>
+  </data>
+  <data name="UnExcpectedError" xml:space="preserve">
+    <value>Erro inesperado</value>
   </data>
   <data name="_12052490_suggestion_feedback_rating_review_negative_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\12052490_suggestion_feedback_rating_review_negative_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
