Adds a messagebox answering the user if its necessary to save the program, cancel the operation, or just close the program when is clicked the close form button (standart from windows forms)

--- a/Projeto Estacionamento/Properties/Resources.resx
+++ b/Projeto Estacionamento/Properties/Resources.resx
@@ -169,6 +169,9 @@
   <data name="PlotNotFound" xml:space="preserve">
     <value>Placa não encontrada</value>
   </data>
+  <data name="SaveBeforeLeave" xml:space="preserve">
+    <value>Deseja salvar o projeto antes de sair?</value>
+  </data>
   <data name="SearchForaPlot" xml:space="preserve">
     <value>Digite uma placa para pesquisar</value>
   </data>
